<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_choose_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.com.classmate.ui.activities.common.ChooseRoleActivity">


    <org.com.classmate.utils.customfonts.CustomTextViewMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/app_ten_dp"
        android:text="Choose Your Role"
        android:textColor="@color/app_introduction_color"
        android:textSize="@dimen/app_twenty_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_twenty_dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rl_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_admin_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/img_admin"
                android:layout_alignParentTop="true"
                android:elevation="@dimen/app_ten_dp"
                android:src="@drawable/tick"
                android:visibility="gone"/>

            <Button
                android:id="@+id/img_admin"
                android:layout_width="@dimen/app_hundred_dp"
                android:layout_height="@dimen/app_hundred_dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:text="@string/admin"
                android:textColor="@color/app_introduction_color" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_hod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/img_hod_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/img_hod"
                android:layout_alignParentTop="true"
                android:elevation="@dimen/app_ten_dp"
                android:src="@drawable/tick"
                android:visibility="gone" />

            <Button
                android:id="@+id/img_hod"
                android:layout_width="@dimen/app_hundred_dp"
                android:layout_height="@dimen/app_hundred_dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:text="@string/hod"
                android:textColor="@color/app_introduction_color" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_twenty_dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rl_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_teacher_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/img_teacher"
                android:layout_alignParentTop="true"
                android:elevation="@dimen/app_ten_dp"
                android:src="@drawable/tick"
                android:visibility="gone" />

            <Button
                android:id="@+id/img_teacher"
                android:layout_width="@dimen/app_hundred_dp"
                android:layout_height="@dimen/app_hundred_dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:text="@string/faculty"
                android:textColor="@color/app_introduction_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_student_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/img_student"
                android:layout_alignParentTop="true"
                android:elevation="@dimen/app_ten_dp"
                android:src="@drawable/tick"
                android:visibility="gone" />

            <Button
                android:id="@+id/img_student"
                android:layout_width="@dimen/app_hundred_dp"
                android:layout_height="@dimen/app_hundred_dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:text="@string/student"
                android:textColor="@color/app_introduction_color" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_ten_dp"
        android:layout_marginRight="@dimen/app_ten_dp"
        android:layout_marginTop="@dimen/app_thirty_dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/app_fifteen_dp"
            android:paddingRight="@dimen/app_fifteen_dp"
            android:text="@string/singn_up"
            android:textColor="@color/white"
            android:textSize="@dimen/app_eighteen_sp"
            android:theme="@style/MyButton" />

        <org.com.classmate.utils.customfonts.CustomTextViewMedium
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fivedp"
            android:padding="@dimen/app_ten_dp"
            android:text="@string/already_member"
            android:textColor="@color/app_introduction_color"
            android:textSize="@dimen/app_twenty_sp" />


    </LinearLayout>

</LinearLayout>
